--- a/app/views/single/style.scss
+++ b/app/views/single/style.scss
@@ -16,8 +16,10 @@
             border: 60px solid transparent;
             box-sizing: border-box;
             position: relative;
+            overflow: hidden;
             .single-content_video-media {
                 width: 100%;
+                height: 100%;
                 background: $color01;
                 position: relative;
                 display: block;
